--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Welcome to my website.</h1>
+        <h2>A new heading for git pull test</h2>
         Hello World!
     </body>
 </html>
